Added endpoint to return paginated threads
